--- a/package.json
+++ b/package.json
@@ -80,15 +80,18 @@
   "homepage": "https://younghwanjoe.github.io/pathfinding-visualizer/",
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "npx prettier --write . && node scripts/build.js",
     "test": "node scripts/test.js",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-console": "off"
+    }
   },
   "browserslist": {
     "production": [
